--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
           <div class="button play small white popupTrigger ae-2 fromCenter margin-top-6 margin-bottom-6" data-popup-id="9">
             <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#play"></use></svg>
           </div>
-          <p class="ae-3"><span class="opacity-8">Start now and get <b>free bonus</b> on account</span></p>
+		<h3> ALL RIGHTS RESERVED BY<b> VIJAY KUMAR MODAK<b> </h3>
+          <p class="ae-3"><span class="opacity-8">Please click the <b>Play Button</b>to view</span></p>
           <form class="slides-form" action="#" autocomplete="off">
             <input type="email" class="input-9 ae-4 fromCenter" name="user-email" placeholder="Email" val=""/>
             <input type="password" class="input-9 ae-5 fromCenter" name="user-password" placeholder="Password" val=""/>
@@ -404,6 +405,6 @@
 
 <!-- Loading Progress Bar -->
 <div class="progress-bar blue"></div>
-		
+	<h1> ALL RIGHTS RESERVED BY VIJAY KUMAR MODAK</h1>
 </body>
 </html>
