--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
             <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#play"></use></svg>
           </div>
              <h5> BY<b> VIJAY KUMAR MODAK<b> </h5>
-          <p class="ae-3"><span class="opacity-8">Please click the <b>Play Button</b> to view</span></p>
+          <p class="ae-3"><span class="opacity-8">Please click the <b>Play Button</b> to view video</span></p>
           <form class="slides-form" action="#" autocomplete="off">
             <input type="email" class="input-9 ae-4 fromCenter" name="user-email" placeholder="Email" val=""/>
             <input type="password" class="input-9 ae-5 fromCenter" name="user-password" placeholder="Password" val=""/>
