--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
         <div class="fix-10-12">
           <div class="embedVideo popupContent">
             <iframe src="https://www.youtube.com/embed/1WxINVlHx8Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		  <video height="200" width="100" poster="https://images.app.goo.gl/kBj5RFUSHh6e2phE8">
           </div>
         </div>
       </div>
