--- a/index.html
+++ b/index.html
@@ -180,7 +180,8 @@
           <div class="button play small white popupTrigger ae-2 fromCenter margin-top-6 margin-bottom-6" data-popup-id="9">
             <svg><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#play"></use></svg>
           </div>
-<h5> All Rights Reserved By :<strong> Vijay Kumar Modak</strong> </h5>
+<!--<h5> All Rights Reserved By :<strong> Vijay Kumar Modak</strong> </h5>-->
+		<p class="ae-3"><span class="opacity-8">please click the <b>Vijay Kumar Modak</b> to view</span></p>
           <p class="ae-3"><span class="opacity-8">please click the <b>Play Button</b> to view</span></p>
           <form class="slides-form" action="#" autocomplete="off">
             <input type="email" class="input-9 ae-4 fromCenter" name="user-email" placeholder="Email" val=""/>
