--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
       </div>  
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/)"></div>
+  <div class="background" style="background-image:url(assets/img/background/img14.jpg)"></div>
 </section>
 
 <!-- Slide 4 (#89) -->
