--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/.jpg)"></div>
+  <div class="background" style="background-image:url(assets/img/background/img-09.jpg)"></div>
 </section>
 
 <!-- Popup Video -->
