--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
       </div>
     </div>
   </div>
-  <div class="background" style="background-image:url(assets/img/background/img-15.jpg width="1280" height="959">)"></div>
+  <div class="background" style="background-image:url(assets/img/background/img-15.jpg)"></div>
 </section>
 
 <!-- Slide 3 (#14) -->
